force-app/main/default/objects/Travel_Request__c/fields/Buget__c.field-meta.xml
<CustomField>
    <fullName>Buget__c</fullName>
    <inlineHelpText>Budget for Air, Hotel, or Rental Car (per Service Agreement, if known)</inlineHelpText>
    <label>Buget</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>