force-app/main/default/objects/Travel_Request__c/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>