force-app/main/default/objects/Travel_Request__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>