force-app/main/default/objects/Travel_Request__c/fields/Notes_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Notes_Special_Requests__c</fullName>
    <inlineHelpText>Additional Notes or Special Requests</inlineHelpText>
    <label>Notes/Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>