force-app/main/default/objects/Travel_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Travel Requests</relationshipLabel>
    <relationshipName>Travel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>