force-app/main/default/objects/Travel_Request__c/fields/ReservationsNeeded__c.field-meta.xml
<CustomField>
    <fullName>ReservationsNeeded__c</fullName>
    <label>Reservation(s) Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
            <value>
                <fullName>Conference Registration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>