force-app/main/default/objects/Travel_Request__c/fields/Travel_Event_Reason__c.field-meta.xml
<CustomField>
    <fullName>Travel_Event_Reason__c</fullName>
    <label>Travel Event/Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>